# posei_experiments

./: Makefile  README.md  build.py  main.py  pyproject.toml
experiments/: __init__.pxd  __init__.py
experiments/core/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml  rust-toolchain.toml
experiments/core/src/: lib.rs
experiments/data/: __init__.pxd  __init__.py  objects.pxd  objects.pyx
experiments/data/rust/: __init__.pxd  __init__.py  core.pxd
tests/: __init__.py  test_objects.py
