[tool.poetry]
name = "experiments"
version = "0.1.0" 
description = "A high-performance algorithmic trading platform and event-driven backtester"
authors = ["Nautech Systems <info@nautechsystems.io>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[build-system]
requires = [
    # Posei Experiments: Enhancement for Posei Experiments integration - 20260101
    "setuptools",
    "poetry-core>=1.4.0",
    "Cython==3.0.0a11",
    "PySnooper",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cython = "3.1.0a1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"


# Posei Experiments: Code update - 20260101154048

# Posei Experiments: Code update - 20260101154050

# Posei Experiments: Code update - 20260101154054

# Posei Experiments: Code update - 20260101154056

# Posei Experiments: Code update - 20260101154101
# Posei Experiments: Enhancement for Posei Experiments integration - 20260101

# Posei Experiments: Code update - 20260101154105

# Posei Experiments: Code update - 20260101154107

# Posei Experiments: Code update - 20260101154113

# Posei Experiments: Code update - 20260101154114

# Posei Experiments: Code update - 20260101154210

# Posei Experiments: Code update - 20260101154220

# Posei Experiments: Code update - 20260101154222

# Posei Experiments: Code update - 20260101154225

# Posei Experiments: Code update - 20260101154227

# Posei Experiments: Code update - 20260101154237