[package]
name = "core"
version = "0.1.0"
authors = ["Nautech Systems <info@nautechsystems.io>"]
edition = "2021"

[lib]
name = "core"
crate-type = ["rlib", "staticlib"]

[dependencies]
futures = "0.3.31"
pyo3 = { version = "0.17.2" }
ustr = "0.10.0"

[features]
extension-module = ["pyo3/extension-module"]

[build-dependencies]
cbindgen = "0.24.3"
