[package]
name = "core"
version = "0.1.0"
authors = ["Nautech Systems <info@nautechsystems.io>"]
edition = "2021"

[lib]
name = "core"
crate-type = ["rlib", "staticlib"]

[dependencies]
futures = "0.3.31"
proptest = "1.6.0"
pyo3 = { version = "0.17.2" }
rand = "0.9.0"

[features]
extension-module = ["pyo3/extension-module"]

[build-dependencies]
cbindgen = "0.24.3"


# Posei Experiments: Code update - 20260101154103

# Posei Experiments: Code update - 20260101154107

# Posei Experiments: Code update - 20260101154125

# Posei Experiments: Code update - 20260101154126
# Posei Experiments: Commit enhancement - 20260101154126


# Posei Experiments: Code update - 20260101154127